grafana/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: grafana-test.datagrand.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
